# PS-ML-protos

./: LICENSE  README.md  pyproject.toml  text_processor.proto  text_processor_pb2.py  text_processor_pb2_grpc.py
grpc_protos/: text_processor_pb2_grpc.py
