[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "grpc-protos"
version = "0.1.0"
description = "A package for gRPC files"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"
protobuf = "^6.33.2"
setuptools = "^80.9.0"
typing-extensions = "^4.15.0"